--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,179 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<!-- link the Font Awesome stylesheet - CDN -->
+		<link
+			href="https://use.fontawesome.com/releases/v5.0.1/css/all.css"
+			rel="stylesheet"
+		/>
 
-  <!-- link the Font Awesome stylesheet - CDN -->
-  <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet" />
+		<!-- link your styles -->
+		<link rel="stylesheet" href="./stylesheets/style.css" />
 
-  <!-- link your styles -->
-  <link rel="stylesheet" href="./stylesheets/style.css" />
+		<link rel="icon" type="image/x-icon" href="./images/slack-icon.png" />
+		<title>Slack is your digital HQ | Slack</title>
+	</head>
 
-  <link rel="icon" type="image/x-icon" href="./images/slack-icon.png">
-  <title>Slack is your digital HQ | Slack</title>
-</head>
+	<body>
+		<!-- NAVBAR -->
+		<nav>
+			<div class="navbar">
+				<img src="./images/slack-logo.png" alt="Slack logo" />
 
-<body>
-  <!-- NAVBAR -->
-  <nav>
-    <div>
-      <img src="./images/slack-logo.png" alt="Slack logo" />
+				<ul>
+					<li>
+						<a href="#">Product</a>
+					</li>
+					<li>
+						<a href="#">Solutions</a>
+					</li>
+					<li>
+						<a href="#">Resources</a>
+					</li>
+					<li>
+						<a href="#">Pricing</a>
+					</li>
+				</ul>
+			</div>
 
-      <ul>
-        <li>
-          <a href="#">Product</a>
-        </li>
-        <li>
-          <a href="#">Solutions</a>
-        </li>
-        <li>
-          <a href="#">Resources</a>
-        </li>
-        <li>
-          <a href="#">Pricing</a>
-        </li>
-      </ul>
-    </div>
+			<div class="navbar-buttons">
+				<button>
+					<img src="./images/icon-search.png" alt="Search icon" />
+				</button>
 
-    <div>
-      <button>
-        <img src="./images/icon-search.png" alt="Search icon">
-      </button>
+				<button id="hamburger-button">
+					<img src="./images/icon-menu.png" alt="Menu icon" />
+				</button>
 
-      <button>
-        <img src="./images/icon-menu.png" alt="Menu icon">
-      </button>
+				<ul id="navbar-cta-buttons">
+					<li>
+						<a href="#">Sign in</a>
+					</li>
+					<li>
+						<a class="white-button try-for-free" href="#">Try for free</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-      <ul hidden>
-        <li>
-          <a href="#">Sign in</a>
-        </li>
-        <li>
-          <a href="#">Try for free</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+		<!-- HEADER -->
+		<header id="hero">
+			<div id="hero-content">
+				<h1>Great teamwork starts with a digital HQ</h1>
 
+				<p><span>Slack is free to try</span> for as long as you'd like.</p>
 
-  <!-- HEADER -->
-  <header>
-    <div>
-      <h1>Great teamwork starts with a digital HQ</h1>
+				<div id="sign-up-button-container">
+					<button id="sign-up-with-mail">Sign up with email</button>
 
-      <p>Slack is free to try for as long as you'd like.</p>
+					<button id="sign-up-with-google">
+						<img src="./images/logo-google.png" alt="Google logo" />
+						<span>Sign up with Google</span>
+						<div></div>
+					</button>
+				</div>
+			</div>
 
-      <div>
-        <button>Sign up with email</button>
+			<div id="hero-image-container">
+				<img
+					id="hero-image"
+					src="./images/hero-product-ui.png"
+					alt="Slack app screenshot"
+				/>
+			</div>
+		</header>
 
-        <button>
-          <img src="./images/logo-google.png" alt="Google logo" />
-          <span>Sign up with Google</span>
-        </button>
-      </div>
+		<main>
+			<section id="partner-logos">
+				<p>Trusted by companies all over the world</p>
 
-    </div>
+				<div id="logo-container">
+					<img src="./images/logo-airbnb.png" alt="Airbnb logo" />
+					<img src="./images/logo-nasa.png" alt="NASA logo" />
+					<img src="./images/logo-uber.png" alt="Uber logo" />
+					<img src="./images/logo-target.png" alt="Target logo" />
+					<img src="./images/logo-nyt.png" alt="New York Times logo" />
+					<img src="./images/logo-spotify.png" alt="Spotify logo" />
+				</div>
+			</section>
 
-    <div>
-      <img src="./images/hero-product-ui.png" alt="Slack app screenshot" />
-    </div>
-  </header>
+			<section id="statistics">
+				<h3>Teams large and small rely on Slack</h3>
+				<p>
+					Slack securely scales up to support collaboration at the world’s
+					biggest companies.
+				</p>
 
-  <main>
-    <section>
-      <p>Trusted by companies all over the world</p>
+				<ul>
+					<li>
+						<p><span>85%</span></p>
+						<p>of users say Slack has improved communication*</p>
+					</li>
 
-      <div>
-        <img src="./images/logo-airbnb.png" alt="Airbnb logo" />
-        <img src="./images/logo-nasa.png" alt="NASA logo" />
-        <img src="./images/logo-uber.png" alt="Uber logo" />
-        <img src="./images/logo-target.png" alt="Target logo" />
-        <img src="./images/logo-nyt.png" alt="New York Times logo" />
-        <img src="./images/logo-spotify.png" alt="Spotify logo" />
-      </div>
+					<li>
+						<p><span>86%</span></p>
+						<p>
+							feel their ability to work remotely has improved has improved*
+						</p>
+					</li>
 
-    </section>
+					<li>
+						<p><span>88%</span></p>
+						<p>feel more connected to their teams*</p>
+					</li>
+				</ul>
+			</section>
 
-    <section>
-      <h3>Teams large and small rely on Slack</h3>
-      <p>Slack securely scales up to support collaboration at the world’s biggest companies.</p>
+			<section id="cta">
+				<h3>Welcome to your new digital HQ</h3>
 
+				<button id="cta-button-free">Try for free</button>
+				<button id="cta-button-sales">Talk to sales</button>
+			</section>
+		</main>
 
-      <ul>
-        <li>
-          <p><span>85%</span></p>
-          <p>
-            of users say Slack has improved communication
-            <sup>*</sup>
-          </p>
-        </li>
+		<footer>
+			<hr />
+			<ul id="quick-links">
+				<li>Status</li>
+				<li>Privacy</li>
+				<li>Terms</li>
+				<li>Cookie Preferences</li>
+				<li>Contact Us</li>
+				<li>
+					<img src="./images/icon-region.png" alt="region logo" />Change Region
+				</li>
+				<li>
+					<img src="./images/icon-download.png" alt="download icon" />Download
+					Slack
+				</li>
+			</ul>
 
-        <li>
-          <p><span>86%</span></p>
-          <p>
-            feel their ability to work remotely has improved has improved
-            <sup>*</sup>
-          </p>
-        </li>
+			<ul id="social-media">
+				<li>
+					<i class="fab fa-twitter"></i>
+				</li>
+				<li>
+					<i class="fab fa-facebook"></i>
+				</li>
+				<li>
+					<i class="fab fa-youtube"></i>
+				</li>
+				<li>
+					<i class="fab fa-linkedin"></i>
+				</li>
+			</ul>
 
-        <li>
-          <p><span>88%</span></p>
-          <p>
-            feel more connected to their teams*
-            <sup>*</sup>
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <section>
-      <h3>Welcome to your new digital HQ</h3>
-
-      <button>Try for free</button>
-      <button>Talk to sales</button>
-    </section>
-
-  </main>
-
-  <footer>
-    <ul>
-      <li>Status</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li>Cookie Preferences</li>
-      <li>Contact Us</li>
-      <li>Change Region</li>
-      <li>Download Slack</li>
-    </ul>
-
-    <hr>
-
-    <ul>
-      <li>
-        <i class="fab fa-twitter"></i>
-      </li>
-      <li>
-        <i class="fab fa-facebook"></i>
-      </li>
-      <li>
-        <i class="fab fa-youtube"></i>
-      </li>
-      <li>
-        <i class="fab fa-linkedin"></i>
-      </li>
-    </ul>
-
-    <div>
-      <small>
-        &copy; 2022 Slack Technologies, LLC, a Salesforce company. All rights reserved. Various trademarks held by
-        their respective owners.
-      </small>
-    </div>
-
-  </footer>
-</body>
-
+			<div id="small-bottom-text">
+				<small>
+					&copy; 2022 Slack Technologies, LLC, a Salesforce company. All rights
+					reserved. Various trademarks held by their respective owners.
+				</small>
+			</div>
+		</footer>
+	</body>
 </html>
