--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -131,8 +131,10 @@
 			<section id="cta">
 				<h3>Welcome to your new digital HQ</h3>
 
-				<button id="cta-button-free">Try for free</button>
-				<button id="cta-button-sales">Talk to sales</button>
+				<div>
+					<button id="cta-button-free">Try for free</button>
+					<button id="cta-button-sales">Talk to sales</button>
+				</div>
 			</section>
 		</main>
 
